# trick

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  data.db  railpack.json
public/: index.html
src/: extractor.rs  main.rs  usage.rs
