[package]
name = "trick"
version = "0.1.0"
edition = "2021"
rust-version = "1.90.0"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.40", features = ["full"] }
tempfile = "3.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "limit", "cors", "timeout"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
futures = "0.3"
uuid = { version = "1.10", features = ["v4"] }
multer = "3.0"
bytes = "1.7"
chrono = "0.4"
